--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "SHABAN-MD-V5",
-  "description": "Jᴀᴠᴀsᴄʀɪᴘᴛ Wʜᴀᴛsᴀᴘᴘ Bᴏᴛ Mᴀᴅᴇ Bʏ Mʀ Sʜᴀʙᴀɴ",
+  "name": "ABUZAR-MD-V5",
+  "description": "Jᴀᴠᴀsᴄʀɪᴘᴛ Wʜᴀᴛsᴀᴘᴘ Bᴏᴛ Mᴀᴅᴇ Bʏ Mʀ ABUZAR",
   "logo": "https://i.ibb.co/9N1sJ41/Manul-Ofc-X.jpg",
   "keywords": ["Mʀ✰Sʜᴀʙᴀɴ"],
   "success_url": "/",
