--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "SHABAN-MD-V5",
+  "name": "ABUZAR-MD-V5",
   "version": "3.0.0",
-  "description": "A WhatsApp Bot Created By MR-SHABAN",
+  "description": "A WhatsApp Bot Created By MR-ABUZAR",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --deep-monitoring --attach --name SHABAN-MD-V5",
-    "stop": "pm2 stop SHABAN-MD-V5",
-    "restart": "pm2 restart SHABAN-MD-V5"
+    "start": "pm2 start index.js --deep-monitoring --attach --name ABUZAR-MD-V5",
+    "stop": "pm2 stop ABUZAR-MD-V5",
+    "restart": "pm2 restart ABUZAR-MD-V5"
   },
   "dependencies": {
     "@whiskeysockets/baileys": "6.6.0",
